# vortex

./: .dockerignore  .env.example  .gitignore  AUDIT_SUMMARY.txt  CHANGES.md  CLAUDE.md  COMPREHENSIVE_PROJECT_ANALYSIS.md  CONFIG_ANALYSIS.md  DEPENDENCY_MANAGEMENT.md  DOCKER_TEST_FIXES.md  DOCUMENTATION_AUDIT.md  DOCUMENTATION_AUDIT_INDEX.md  DOCUMENTATION_AUDIT_README.md  Dockerfile  Dockerfile.simple  ENV_EXAMPLE.md  IMPORT_SIMPLIFICATION.md  INSTALLATION.md  Makefile  README.md  TESTING.md  assets  build.sh  config.json  cronfile  docker-compose.yml  entrypoint.sh  ping.sh  preset.json  pyproject.toml  pytest-no-cov.ini  pytest.ini  requirements.txt  run-all-tests.sh  run_barchart_debug.py  run_bc_utils.sh  setup.py  show_input.sh  test_actual_gc_scenario.py  test_cli.py  (+4 more)
.claude/: settings.local.json
.claude/policies/: file-creation-policy.md
.github/workflows/: test.yml
assets/: ibkr.json
bcutils/: bc_api.py  bc_utils.py  config.json  config.py  config_utils.py  contract_utils.py  contracts.py  date_utils.py  download_job.py  downloader.py  instrument_type.py  logging_utils.py  more_utils.py  period.py  price_series.py  session_config.py  storage_utils.py  utils.py
bcutils/data_providers/: bc_data_provider.py  data_provider.py  ib_data_provider.py  yf_data_provider.py  yh_data_provider.py
bcutils/data_storage/: csv_storage.py  data_storage.py  file_storage.py  metadata.py  parquet_storage.py
bcutils/downloaders/: backfill_downloader.py  base_downloader.py  download_job.py  mock_downloader.py  updating_downloader.py
bcutils/initialization/: config_utils.py  session_config.py
bcutils/instruments/: columns.py  forex.py  future.py  period.py  price_series.py  stock.py
bcutils/tests/: test_downloader.py
bcutils/utils/: utils.py
config/: __init__.py  config.toml.example
config/assets/: barchart.json  yahoo.json
config/environments/: development.toml  production.toml  testing.toml
config/examples/: config.toml.example  environment.env.example
config/schemas/: __init__.py  base.py
docker/: Dockerfile  Dockerfile.rootless  Dockerfile.simple  Dockerfile.simple.rootless  README-SECURITY.md  cronfile  docker-compose-rootless.yml  docker-compose.monitoring.yml  docker-compose.yml  entrypoint-rootless.sh  entrypoint-simple-rootless.sh  entrypoint-simple.sh  entrypoint.sh  ping.sh  run_bc_utils.sh
docker/monitoring/: prometheus.yml
docker/monitoring/alerts/: vortex_alerts.yml
docs/: DOCKER-TROUBLESHOOTING.md  DOCKER.md  ERROR_HANDLING.md  MONITORING.md  RAW_DATA_STORAGE.md  README.md  architecture_improvements.md  distributed-quota-management-design.md  plugins.md
docs/adr/: 001-clean-architecture-migration.md  002-error-handling-consolidation.md  004-clean-architecture-implementation.md
docs/architecture/: provider-column-mapping.md
docs/design/: BEST_PRACTICES.md
docs/design/hld/: 01-system-overview.md  02-component-architecture.md  03-data-flow-design.md  04-provider-abstraction.md  05-storage-architecture.md  06-security-design.md  07-deployment-architecture.md  08-integration-design.md  README.md
docs/design/lld/: 01-component-implementation.md  02-data-processing-implementation.md  03-provider-implementation.md  04-storage-implementation.md  05-security-implementation.md  06-testing-implementation.md  README.md
docs/development/: architecture.md  contributing.md  error-handling-improvements.md  logging.md
docs/requirements/prd/: README.md  data-requirements.md  product-requirements.md  user-stories.md
docs/security/: CREDENTIAL-MANAGEMENT.md
docs/user/: environment-variables.md  installation.md  quickstart.md  troubleshooting.md
env-files/: barchart.env  ibkr.env  yahoo.env
env_files/: barchart.env  ibkr.env  yahoo.env
examples/: architecture_improvements_usage.py  new_provider_example.py
scripts/: README.md  build-production.sh  build.sh  debug-container.sh  example-docker-publish.sh  interpolate_vars.sh  test-docker-build-robust.sh  test-docker-build.sh  update_imports.py  validate-critical-tests.sh
src/bcutils/: py.typed
src/bcutils/cli/: __init__.py  main.py
src/bcutils/data_providers/: bc_data_provider.py  data_provider.py
src/bcutils/data_storage/: csv_storage.py  file_storage.py  metadata.py  parquet_storage.py
src/bcutils/downloaders/: backfill_downloader.py  base_downloader.py  mock_downloader.py
src/bcutils/initialization/: config_utils.py  session_config.py
src/bcutils/instruments/: future.py  instrument.py  price_series.py  stock.py
src/vortex/: __init__.py  bc_utils.py  config.py  constants.py  exceptions.py  logging.py  logging_integration.py  logging_original.py  plugins.py
test-data-cron-1754357764/: health.check
test-data-cron-1754358334/: health.check
test-data-cron-1754359043/: health.check
test-data-cron-1754362233/: health.check
test-data-entrypoint-1754357730/: health.check
test-data-entrypoint-1754358300/: health.check
test-data-entrypoint-1754358865/: health.check
test-data-entrypoint-1754359009/: health.check
test-data-entrypoint-1754362199/: health.check
test-data-yahoo/: health.check
test-data-yahoo-1754357737/: health.check
test-data-yahoo-1754358307/: health.check
test-data-yahoo-1754358877/: health.check
test-data-yahoo-1754359016/: health.check
test-data-yahoo-1754362206/: health.check
test-data-yahoo-final/: health.check
test-yahoo-quick/: health.check
tests/: conftest.py  test_cli.py  test_cli_ux.py  test_config.py  test_downloader.py  test_exceptions.py  test_logging.py  test_mocks.py  test_plugins.py
tests/contracts/: __init__.py
tests/docker/: test-docker-build.sh  validate_csv_columns.py
tests/e2e/: __init__.py  csv_validation.py  test_barchart_e2e.py  test_cli_workflows.py
tests/fixtures/: __init__.py  mock_data.py  providers.py  secure_credentials.py  test_mocks.py
tests/integration/: __init__.py  test_provider_downloader_integration.py
tests/performance/: __init__.py
tests/unit/: __init__.py  test_config.py  test_config_manager_advanced.py  test_exceptions_compatibility.py  test_logging_integration.py  test_plugins.py
(+359 files in other folders)
