[project]
name = "vortex"
version = "0.1.3"
description = "Financial data automation tool for multiple providers (Barchart, Yahoo Finance, Interactive Brokers)"
authors = [{name = "Andy Geach", email = "andy@bugorfeature.net"}]
license = {text = "BSD-3-Clause"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["trading", "finance", "data", "automation", "barchart", "yahoo", "ibkr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "requests>=2.26",
    "numpy>=1.19.4,<1.24.0",
    "pandas~=2.1.4",
    "beautifulsoup4>=4.0",
    "pytz",
    "pyarrow",
    "scipy",
    "ib-insync==0.9.86",
    "retrying",
    "yfinance",
    "click>=8.0",
    "rich>=10.0",
    "tomli>=1.2.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2",
    "flake8>=4.0.1",
]
test = [
    "pytest>=6.2",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "freezegun",
]
lint = [
    "flake8>=4.0.1",
    "black",
    "isort",
]

[project.urls]
Homepage = "https://github.com/makutaku/vortex"
Repository = "https://github.com/makutaku/vortex"
Issues = "https://github.com/makutaku/vortex/issues"

[project.scripts]
vortex = "vortex.cli.main:cli"


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# UV-specific configuration
[tool.uv]
# UV will respect pyproject.toml dependencies
# No additional configuration needed - uv works out of the box

[tool.uv.sources]
# Optional: specify custom sources if needed
# vortex = { path = "." }

[tool.setuptools]
# Ensure setuptools finds packages correctly for uv
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
include = ["vortex*"]

[tool.setuptools.package-data]
vortex = ["py.typed"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.2"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/vortex",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests that may take time",
    "network: Tests that require network access",
    "credentials: Tests that require valid provider credentials",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/vortex"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/cli/main.py",  # CLI entry point
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
